-- A Cabal file for use in the test cases of Flycheck Haskell.

name:                flycheck-haskell-test
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib/
  extensions:          OverloadedStrings
  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell98

executable flycheck-haskell-test
  hs-source-dirs:      src/
  extensions:          GeneralizedNewtypeDeriving
  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell2010

executable flycheck-haskell-unknown-stuff
  -- This shall test the handling of unknown language and extension values
  build-depends:       base >=4.7 && <4.8
  extensions:          YouDontKnowThisOne
  default-language:    SpamLanguage
